--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,11 +34,12 @@ outputs:
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
         - dill >=0.2.2,<0.3
+        - enum34 >=1.1.6,<1.2.0  # [py<34]
         - flask >=0.12.4,<0.13
-        - flask-appbuilder >=1.11.1,<2.0.0
-        - flask-admin ==1.4.1
+        - flask-appbuilder ==1.12.1
+        - flask-admin ==1.5.2
         - flask-caching >=1.3.3,<1.4.0
-        - flask-login ==0.2.11
+        - flask-login >=0.3,<0.5
         - flask-swagger ==0.2.13
         - flask-wtf >=0.14.2,<0.15
         - funcsigs ==1.0.0  # [py<33]
@@ -46,19 +47,20 @@ outputs:
         - gitpython >=2.0.2
         - gunicorn >=19.4.0,<20.0
         - iso8601 >=0.1.12
-        - jinja2 >=2.7.3,<2.9.0
+        - json-merge-patch ==0.2
+        - jinja2 >=2.7.3,<=2.10.0
         - lxml >=3.6.0,<4.0
         - markdown >=2.5.2,<3.0
         - pandas >=0.17.1,<1.0.0
         - pendulum ==1.4.4
-        - psutil >=4.2.0,<5.0.0
+        - psutil >=4.2.0,<6.0.0
         - pygments >=2.0.1,<3.0
         - python-daemon >=2.1.1,<2.2
         - python-dateutil >=2.3,<3
         - python-nvd3 ==0.15.0
-        - requests >=2.5.1,<3
+        - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
-        - sqlalchemy >=1.1.15,<1.2.0
+        - sqlalchemy >=1.1.15,<1.3.0
         - tabulate >=0.7.5,<0.8.0
         - tenacity ==4.8.0
         - thrift >=0.9.2
@@ -149,6 +151,12 @@ outputs:
   #       - azure-mgmt-datalake-store ==0.4.0
   #       - azure-datalake-store ==0.0.19
 
+  - name: {{ name }}-with-azure_cosmos
+    requirements:
+      run:
+        - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
+        - azure-cosmos>=3.0.1
+
   - name: {{ name }}-with-cassandra
     requirements:
       run:
@@ -190,7 +198,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - requests >=2.5.1,<3
+        - requests >=2.20.0,<3
 
   - name: {{ name }}-with-datadog
     requirements:
@@ -462,9 +470,10 @@ about:
       versionable, testable, and collaborative.
 
   doc_url: http://pythonhosted.org/airflow/profiling.html
-  dev_url: https://github.com/apache/incubating-airflow
+  dev_url: https://github.com/apache/airflow
 
 extra:
   recipe-maintainers:
     - sodre
     - halldc
+    - xylar
