--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -29,12 +29,15 @@ outputs:
         - docutils >=0.14,<1.0
       run:
         - python
-        - alembic >=0.9,<1.0
+        - alembic >=1.0,<2.0
+        - cached_property >=1.5.0,<1.6.0
+        - colorlog ==4.0.2
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
         - dill >=0.2.2,<0.3
+        - dumb-init >=1.2.2
         - enum34 >=1.1.6,<1.2.0  # [py<34]
-        - flask >=1.0,<2.0
+        - flask >=1.1.0,<2.0
         - flask-appbuilder ==1.12.3
         - flask-admin ==1.5.3
         - flask-caching >=1.3.3,<1.4.0
@@ -48,7 +51,8 @@ outputs:
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
-        - jinja2 >=2.7.3,<=2.10.0
+        - jinja2 >=2.10.1,<2.11.0
+        - lazy_object_proxy >=1.3.0,<1.4.0
         - lxml>=4.0.0
         - markdown >=2.5.2,<3.0
         - pandas >=0.17.1,<1.0.0
@@ -60,13 +64,14 @@ outputs:
         - python-nvd3 ==0.15.0
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
-        - sqlalchemy >=1.1.15,<1.3.0
+        - sqlalchemy >=1.3.0,<1.4.0
         - tabulate >=0.7.5,<0.9
         - tenacity ==4.12.0
+        - termcolor ==1.1.0
         - text-unidecode ==1.2
         - typing  # [py<35]
         - thrift >=0.9.2
-        - tzlocal >=1.4
+        - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
         - werkzeug >=0.15.0,<0.16.0
         - zope.deprecation >=4.0,<5.0
@@ -163,7 +168,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - azure-mgmt-containerinstance
+        - azure-mgmt-containerinstance >=1.5.0
 
   - name: {{ name }}-with-cassandra
     requirements:
@@ -175,7 +180,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - celery >=4.1.1,<4.2.0
+        - celery >=4.3.0,<4.4.0
         - flower >=0.7.3,<1.0
         - tornado >=4.2.0,<6.0
 
@@ -315,6 +320,7 @@ outputs:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
         - pymongo >=3.6.0
+        - dnspython >=1.13.0,<2.0.0
 
   - name: {{ name }}-with-mssql
     requirements:
@@ -408,7 +414,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - slackclient >=1.0.0
+        - slackclient >=1.0.0,<2.0.0
 
   # - name: {{ name }}-with-snowflake
   #   requirements:
