--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,8 +31,7 @@ outputs:
       run:
         - python
         - alembic >=1.0,<2.0
-        # not on conda-forge
-        #- cached_property >=1.5.0,<1.6.0
+        - cached-property >=1.5.0,<1.6.0
         - colorlog ==4.0.2
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
@@ -55,8 +54,7 @@ outputs:
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
         - jinja2 >=2.10.1,<2.11.0
-        # not on conda-forge
-        #- lazy_object_proxy >=1.3.0,<1.4.0
+        - lazy-object-proxy >=1.3.0,<1.4.0
         - lxml>=4.0.0
         - markdown >=2.5.2,<3.0
         - pandas >=0.17.1,<1.0.0
