--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,6 +31,7 @@ outputs:
       run:
         - python
         - alembic >=1.0,<2.0
+        - argcomplete >=1.10.0,<1.11.0
         - cached-property >=1.5.0,<1.6.0
         - colorlog ==4.0.2
         - configparser >=3.5.0,<3.6.0
@@ -72,6 +73,7 @@ outputs:
         - termcolor ==1.1.0
         - text-unidecode ==1.2
         - typing  # [py<35]
+        - typing-extensions >=3.7.4  # [py<38]
         - thrift >=0.9.2
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
