--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,29 +34,24 @@ outputs:
         - argcomplete >=1.10.0,<1.11.0
         - cached-property >=1.5.0,<1.6.0
         - colorlog ==4.0.2
-        - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
         - dill >=0.2.2,<0.3
         # not on conda-forge
         #- dumb-init >=1.2.2
         - enum34 >=1.1.6,<1.2.0  # [py<34]
         - flask >=1.1.0,<2.0
-        - flask-appbuilder ==1.12.3
-        - flask-admin ==1.5.3
+        - flask-appbuilder >=1.12.5,<2.0.0
         - flask-caching >=1.3.3,<1.4.0
         - flask-login >=0.3,<0.5
         - flask-swagger ==0.2.13
         - flask-wtf >=0.14.2,<0.15
         # funcsigs ==1.0.0 not available on conda-forge
         - funcsigs ==1.0.2  # [py<33]
-        - future >=0.16.0,<0.17
-        - gitpython >=2.0.2
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
         - jinja2 >=2.10.1,<2.11.0
         - lazy-object-proxy >=1.3.0,<1.4.0
-        - lxml>=4.0.0
         - markdown >=2.5.2,<3.0
         - pandas >=0.17.1,<1.0.0
         - pendulum ==1.4.4
@@ -64,7 +59,6 @@ outputs:
         - pygments >=2.0.1,<3.0
         - python-daemon >=2.1.1,<2.2
         - python-dateutil >=2.3,<3
-        - python-nvd3 ==0.15.0
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
         - sqlalchemy >=1.3.0,<1.4.0
@@ -77,7 +71,6 @@ outputs:
         - thrift >=0.9.2
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
-        - werkzeug >=0.15.0,<0.16.0
         - zope.deprecation >=4.0,<5.0
     test:
       commands:
