--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,6 +47,7 @@ outputs:
         - flask-wtf >=0.14.2,<0.15
         # funcsigs ==1.0.0 not available on conda-forge
         - funcsigs ==1.0.2  # [py<33]
+        - future >=0.16.0,<0.17
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
