--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -73,6 +73,7 @@ outputs:
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
         - zope.deprecation >=4.0,<5.0
+        - backports
     test:
       commands:
         - airflow initdb
