--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,6 +34,7 @@ outputs:
         - argcomplete >=1.10.0,<1.11.0
         - cached-property >=1.5.0,<1.6.0
         - colorlog ==4.0.2
+        - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
         - dill >=0.2.2,<0.3
         # not on conda-forge
