--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -41,6 +41,7 @@ outputs:
         #- dumb-init >=1.2.2
         - enum34 >=1.1.6,<1.2.0  # [py<34]
         - flask >=1.1.0,<2.0
+        - flask-admin ==1.5.3
         - flask-appbuilder >=1.12.5,<2.0.0
         - flask-caching >=1.3.3,<1.4.0
         - flask-login >=0.3,<0.5
