--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,13 +45,13 @@ outputs:
         - flask-login >=0.3,<0.5
         - flask-swagger ==0.2.13
         - flask-wtf >=0.14.2,<0.15
-        # funcsigs ==1.0.0 not available on conda-forge
-        - funcsigs ==1.0.2  # [py<33]
+        - funcsigs >=1.0.2, <2.0.0
         - future >=0.16.0,<0.17
         - python-graphviz >=0.12
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
+        - jsonschema >=3.0.0,<4.0.0
         - jinja2 >=2.10.1,<2.11.0
         - lazy-object-proxy >=1.3.0,<1.4.0
         - markdown >=2.5.2,<3.0
@@ -65,6 +65,7 @@ outputs:
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
         - sqlalchemy >=1.3.0,<1.4.0
+        - sqlalchemy_jsonfield >=0.9.0,<0.10.0
         - tabulate >=0.7.5,<0.9
         - tenacity ==4.12.0
         - termcolor ==1.1.0
