--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -65,7 +65,7 @@ outputs:
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
         - sqlalchemy >=1.3.0,<1.4.0
-        - sqlalchemy_jsonfield >=0.9.0,<0.10.0
+        - sqlalchemy-jsonfield >=0.9.0,<0.10.0
         - tabulate >=0.7.5,<0.9
         - tenacity ==4.12.0
         - termcolor ==1.1.0
