--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,6 +33,7 @@ outputs:
         - alembic >=1.0,<2.0
         - argcomplete >=1.10.0,<1.11.0
         - cached-property >=1.5.0,<1.6.0
+        - cattrs >=0.9,<0.10.0
         - colorlog ==4.0.2
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
