--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -74,7 +74,7 @@ outputs:
         - termcolor ==1.1.0
         - text-unidecode ==1.2
         - typing  # [py<35]
-        - typing_extensions >=3.7.4  # [py<38]
+        - typing_extensions >=3.7.4
         - thrift >=0.9.2
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
