--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -32,6 +32,7 @@ outputs:
         - python
         - alembic >=1.0,<2.0
         - argcomplete >=1.10.0,<1.11.0
+        - attrs >=19.3,<19.4
         - cached-property >=1.5.0,<1.6.0
         - cattrs >=0.9,<0.10.0  # [py<38]
         # Earlier versions are not py38 compatible
@@ -42,23 +43,24 @@ outputs:
         - dill >=0.2.2,<0.4
         - enum34 >=1.1.6,<1.2.0  # [py<34]
         - flask >=1.1.0,<2.0
-        - flask-admin ==1.5.3
-        - flask-appbuilder >=1.12.5,<2.0.0
+        - flask-admin ==1.5.4
+        - flask-appbuilder >=1.12.2,<2.0.0  # [py<36]
+        - flask-appbuilder >=2.2,<2.3  # [py>=36]
         - flask-caching >=1.3.3,<1.4.0
         - flask-login >=0.3,<0.5
         - flask-swagger ==0.2.13
         - flask-wtf >=0.14.2,<0.15
-        - funcsigs >=1.0.2, <2.0.0
+        - funcsigs >=1.0.2,<2.0.0
         - future >=0.16.0,<0.17
         - python-graphviz >=0.12
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
-        - jsonschema >=3.0.0,<4.0.0
+        - jsonschema >=3.0.0,<3.1.0
         - jinja2 >=2.10.1,<2.11.0
         - lazy-object-proxy >=1.3.0,<1.4.0
         - markdown >=2.5.2,<3.0
-        - marshmallow-sqlalchemy >=0.16.1,<0.19.0
+        - marshmallow-sqlalchemy >=0.16.1,<0.19.0  # [py<36]
         - pandas >=0.17.1,<1.0.0
         - pendulum ==1.4.4
         - psutil >=4.2.0,<6.0.0
@@ -68,14 +70,15 @@ outputs:
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
         - sqlalchemy >=1.3.0,<1.4.0
-        - sqlalchemy-jsonfield >=0.9.0,<0.10.0
+        - sqlalchemy-jsonfield ==0.8.0  # [py<35]
+        - sqlalchemy-jsonfield >=0.9.0,<0.10.0  # [py>=35]
         - tabulate >=0.7.5,<0.9
         - tenacity ==4.12.0
         - termcolor ==1.1.0
         - text-unidecode ==1.2
         - typing  # [py<35]
         - typing_extensions >=3.7.4
-        - thrift >=0.9.2
+        - thrift >=0.9.2c
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
         - zope.deprecation >=4.0,<5.0
@@ -180,7 +183,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - cassandra-driver >=3.13.0
+        - cassandra-driver >=3.13.0,<3.21.0
 
   - name: {{ name }}-with-celery
     requirements:
@@ -189,7 +192,7 @@ outputs:
         - celery >=4.3.0,<4.4.0
         - flower >=0.7.3,<1.0
         - tornado >=4.2.0,<6.0
-        - kombu ==4.6.3
+        - kombu ==4.6.3  # [py<30]
 
   - name: {{ name }}-with-cgroups
     requirements:
