--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -56,7 +56,9 @@ outputs:
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - json-merge-patch ==0.2
-        - jsonschema >=3.0.0,<3.1.0
+        - jsonschema >=3.0.0,<3.1.0  # [py<38]
+        # Earlier versions were not build with py38
+        - jsonschema >=3.1.0,<3.2.0  # [py>=38]
         - jinja2 >=2.10.1,<2.11.0
         - lazy-object-proxy >=1.3.0,<1.4.0
         - markdown >=2.5.2,<3.0
