--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -50,16 +50,16 @@ outputs:
         - flask-login >=0.3,<0.5
         - flask-swagger ==0.2.13
         - flask-wtf >=0.14.2,<0.15
-        - funcsigs >=1.0.2,<2.0.0
-        - future >=0.16.0,<0.17
+        - funcsigs >=1.0.0,<2.0.0
+        - future >=0.16.0,<0.19
         - python-graphviz >=0.12
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
+        - jinja2 >=2.10.1,<2.11.0
         - json-merge-patch ==0.2
         - jsonschema >=3.0.0,<3.1.0  # [py<38]
         # Earlier versions were not build with py38
         - jsonschema >=3.1.0,<3.2.0  # [py>=38]
-        - jinja2 >=2.10.1,<2.11.0
         - lazy-object-proxy >=1.3.0,<1.4.0
         - markdown >=2.5.2,<3.0
         - marshmallow-sqlalchemy >=0.16.1,<0.19.0  # [py<36]
@@ -78,9 +78,9 @@ outputs:
         - tenacity ==4.12.0
         - termcolor ==1.1.0
         - text-unidecode ==1.2
-        - typing  # [py<35]
-        - typing_extensions >=3.7.4
         - thrift >=0.9.2
+        - typing  # [py<35]
+        - typing_extensions >=3.7.4  # [py<38]
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
         # werkzeug 1.0 was just released and seems not to work with flask-wtf
@@ -244,7 +244,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - pydruid >=0.4.1
+        - pydruid >=0.4.1,<=0.5.8
 
   - name: {{ name }}-with-elasticsearch
     requirements:
@@ -398,7 +398,7 @@ outputs:
     requirements:
       run:
         - {{ pin_subpackage(name, max_pin='x.x.x.x.x.x') }}
-        - simple-salesforce >=0.72
+        - simple-salesforce >=0.72,<1.0.0
 
   - name: {{ name }}-with-samba
     requirements:
