--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,21 +34,20 @@ outputs:
         - argcomplete >=1.10.0,<1.11.0
         - attrs >=19.3,<19.4
         - cached-property >=1.5.0,<1.6.0
-        - cattrs >=0.9,<0.10.0  # [py<38]
-        # Earlier versions are not py38 compatible
-        - cattrs >=1.0,<1.1.0  # [py>=38]
-        - colorlog ==4.0.2
+        - cattrs >=1.0,<1.1.0
+        - colorlog 4.0.2
         - configparser >=3.5.0,<3.6.0
         - croniter >=0.3.17,<0.4
         - dill >=0.2.2,<0.4
+        - email-validator
         - enum34 >=1.1.6,<1.2.0  # [py<34]
         - flask >=1.1.0,<2.0
-        - flask-admin ==1.5.4
+        - flask-admin 1.5.4
         - flask-appbuilder >=1.12.2,<2.0.0  # [py<36]
         - flask-appbuilder >=2.2,<2.3  # [py>=36]
         - flask-caching >=1.3.3,<1.4.0
         - flask-login >=0.3,<0.5
-        - flask-swagger ==0.2.13
+        - flask-swagger 0.2.13
         - flask-wtf >=0.14.2,<0.15
         - funcsigs >=1.0.0,<2.0.0
         - future >=0.16.0,<0.19
@@ -56,35 +55,37 @@ outputs:
         - gunicorn >=19.5.0,<20.0
         - iso8601 >=0.1.12
         - jinja2 >=2.10.1,<2.11.0
-        - json-merge-patch ==0.2
+        - json-merge-patch 0.2
         - jsonschema >=3.0.0,<3.1.0  # [py<38]
-        # Earlier versions were not build with py38
+        # Earlier versions were not build with py38, so this is newer than upstream spec
         - jsonschema >=3.1.0,<3.2.0  # [py>=38]
         - lazy-object-proxy >=1.3.0,<1.4.0
         - markdown >=2.5.2,<3.0
         - marshmallow-sqlalchemy >=0.16.1,<0.19.0  # [py<36]
         - pandas >=0.17.1,<1.0.0
-        - pendulum ==1.4.4
+        - pendulum 1.4.4
         - psutil >=4.2.0,<6.0.0
         - pygments >=2.0.1,<3.0
-        - python-daemon >=2.1.1,<2.2
+        - python-daemon >=2.1.1
         - python-dateutil >=2.3,<3
+        - python-nvd3 >=0.15.0,<0.16.0
+        - python-slugify >=3.0.0,<5.0
         - requests >=2.20.0,<3
         - setproctitle >=1.1.8,<2
         - sqlalchemy >=1.3.0,<1.4.0
-        - sqlalchemy-jsonfield ==0.8.0  # [py<35]
+        - sqlalchemy-jsonfield 0.8.0  # [py<35]
         - sqlalchemy-jsonfield >=0.9.0,<0.10.0  # [py>=35]
         - tabulate >=0.7.5,<0.9
-        - tenacity ==4.12.0
-        - termcolor ==1.1.0
-        - text-unidecode ==1.2
+        - tenacity 4.12.0
+        - termcolor 1.1.0
+        - text-unidecode 1.2
         - thrift >=0.9.2
         - typing  # [py<35]
+        # contrary to upstream spec, this seems to be needed for py=38 as well
         - typing_extensions >=3.7.4
         - tzlocal >=1.4,<2.0.0
         - unicodecsv >=0.14.1
-        # werkzeug 1.0 was just released and seems not to work with flask-wtf
-        - werkzeug<1.0
+        - werkzeug<1.0.0
         - zope.deprecation >=4.0,<5.0
     test:
       commands:
